# Multi-Modal-Comparators

./: .gitignore  Pipfile  README.md  demo.py  mmc_model_RAM_profiling.ipynb  pyproject.toml  pyproject.toml.INSTALL-ALL  setup.py
src/mmc/: __init__.py  modalities.py  multimmc.py  multimodalcomparator.py  registry.py
src/mmc/ez/: CLIP.py
src/mmc/loaders/: __init__.py  basemmcloader.py  clipfaloader.py  cloobloader.py  fairsliploader.py  freddefrallanmclip.py  keliploader.py  mlfcliploader.py  openaicliploader.py  sbertclibloader.py
src/mmc/mock/: openai.py
src/mmc/napm_installs/: __init__.py
tests/: test_api_mock.py  test_ezmode_clip.py  test_mmc.py  test_mmc_clipfa.py  test_mmc_fairslip  test_mmc_fairslip.py  test_mmc_fairslip_cc12m.py  test_mmc_fairslip_cc3m.py  test_mmc_katcloob.py  test_mmc_loaders.py  test_mmc_mlf.py  test_mmc_sbert.py  test_modalities.py  test_module_mock.py  test_multimmc.py  test_registry.py
